assets/default/css/smis.css
html {
	background: white;
	font-family: Helvetica, Arial, serif;
	font-size: 14px;
	color: #333;
	height: 100%;
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

body {
	position: relative;
	min-height: 100%;
	margin: 0;
	padding-bottom: 80px;
}

input {
	font-family: Helvetica, Arial;
	font-size: 18px;
	margin-right: 5px;
}

p {
	margin: 0px;
}

img {
	border: 0px;
}

a, .ui-widget-content a {
	text-decoration: none;
}

a:hover, .ui-widget-content a {
	text-decoration: none;
}

a:visited {
	color: white;
}

.clear {
	clear: both;
}

.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
	border: 1px solid #aaa;
}

.button-primary {
	font-size: 18px;
	color: #ffffff;
	border: none;
	border-radius: 2px;
	background-color: #40c4ff;
}

.button-primary:link .button-primary:visited {
	color: #ffffff;
}

.button-primary:hover {
	color: #ffffff;
	cursor: pointer;
	background-color: #7cd7ff;
}

.button-secondary {
	font-size: 18px;
	color: #ffffff;
	border: none;
	border-radius: 2px;
	background-color: #40c4ff;
}

.button-secondary:hover {
	font-size: 18px;
	color: #fff;
	border: none;
	border-radius: 2px;
	background-color: #7cd7ff;
}

.button-big {
	padding: 12px 30px;
}

.button-small {
	padding: 5px 18px;
}

table.list {
	border-collapse: collapse;
}

table.list th {
	color: #333;
	font-weight: bold;
	font-size: 14px;
	text-align: left;
	padding: 5px 3px;
	border-bottom: 1px dotted #ddd;
}

table.list td {
	padding: 5px;
	border-spacing: 1px;
}

table.list td.bg1 {
	background-color: #eee;
}

tr.bg1 {
	background-color: #fff;
}

tr.bg0 {
	background-color: #eee;
}

.mandatory {
	font-weight: bold;
}

.form > input.field {
	font-size: 12px;
}

.field {
	font-size: 12px;
	background-color: #fff;
}

.note {
	color: #339900;
	background-color: #fff;
	font-weight: bold;
	text-align: left;
	border: 2px solid #339900;
	padding: 10px 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	margin: 10px
}

.note > div {
	text-align: left;
	padding-left: 20px;
	background: transparent url(../images/tick.png) left top no-repeat;
	font-weight: bold;
}

.col1 {
	background-color: #d6e5b6;
	vertical-align: top;
}

.warning {
	background: #fff;
	color: #dc0000;
	border: 2px solid #dc0000;
	padding: 10px 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	margin: 10px
}

.warning > div {
	text-align: left;
	padding-left: 20px;
	background: transparent url(../images/icons/warning.png) left top no-repeat;
	font-weight: bold;
}

.titleBar {
	padding-top: 0px;
}

.titleBar h1 {
	padding: 0;
	margin: 10px 10px;
	font-weight: normal;
	font-size: 28px;
}

.titleBar a.button {
	margin: 0 10px;
}

.faq-search {
	font-size: 14px;
	text-align: center;
	color: #000;
	padding: .3em 1em;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	border: 1px #F6920B solid;
	background: #FEC13C;
	background-image: -ms-linear-gradient(bottom, #F6920B 0%, #FEC13C 100%);
	background-image: -moz-linear-gradient(bottom, #F6920B 0%, #FEC13C 100%);
	background-image: -o-linear-gradient(bottom, #F6920B 0%, #FEC13C 100%);
	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #F6920B), color-stop(1, #FEC13C));
	background-image: -webkit-linear-gradient(bottom, #F6920B 0%, #FEC13C 100%);
	background-image: linear-gradient(to top, #F6920B 0%, #FEC13C 100%);
	text-shadow: none;
}

a.button.but-enter {
	font-size: 14px;
	text-align: center;
	padding: .3em 1em;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	border: 1px #cdcdcd solid;
	text-shadow: none;
	background: #EAEAEA;
	background-image: -ms-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -moz-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -o-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FDFDFD), color-stop(0.5, #EAEAEA), color-stop(1, #FDFDFD));
	background-image: -webkit-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: linear-gradient(to bottom, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);

}

.faq-tab {
	width: 170px;
	height: 45px;
	border: 2px solid #e5e5e5;
	font-size: 14px;
	border-radius: 10px 10px 0 0;
	text-align: center;
}

.faq-tab:hover {
	cursor: pointer
}

.faq-public-choice-active {
	background: #6EBB0B;
	color: white;
}

.faq-choice-inactive {
	background: #EAEAEA;
	background-image: -ms-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -moz-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -o-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FDFDFD), color-stop(0.5, #EAEAEA), color-stop(1, #FDFDFD));
	background-image: -webkit-linear-gradient(top, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
	background-image: linear-gradient(to bottom, #FDFDFD 0%, #EAEAEA 50%, #FDFDFD 100%);
}

.faq-professional-choice-active {
	background: #1b6399;
	color: white;
}

.faq-table-td {
	text-align: right;
	vertical-align: middle;
}

.faq-category-title {
	font-weight: bold;
}

.faq-category-title a:hover {
	text-decoration: underline;
}

.faq-category-title a:link, a:visited {
	color: black;
}

.faq-category-link {
	padding-left: 10px;
	line-height: 25px;
	font-size: 16px;
}

.faq-search-result {
	padding-left: 10px;
	line-height: 25px;
	font-size: 16px;
}

.faq-search-result a:hover {
	text-decoration: underline;
}

.faq-search-result a {
	color: black;
}

.slider-wrapper {
	width: 100%;
	max-width: 750px;
	margin: 0px auto;
	box-shadow: 0px 0px 20px #333;
	-webkit-box-shadow: 0px 0px 20px #333;
}

.nivoSlider {
	position: relative;
	height: 328px;
	background: url(../images/loading.gif) no-repeat 50% 50%;
}
/* ... */

